# research-agent

./: .gitignore  agent.py  app.py  dsl_designer.py  pyproject.toml  schema.py
.scite_browser_profile/: Local State
.scite_browser_profile/Default/: Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
.scite_browser_profile/Default/DawnGraphiteCache/: data_1  index
.scite_browser_profile/Default/DawnWebGPUCache/: data_1  index
.scite_browser_profile/Default/Extension Rules/: LOG
.scite_browser_profile/Default/Extension Scripts/: LOG
.scite_browser_profile/Default/Extension State/: LOG
.scite_browser_profile/Default/GCM Store/: LOG
.scite_browser_profile/Default/GPUCache/: data_0  data_1  data_2  index
.scite_browser_profile/Default/Session Storage/: LOG
.scite_browser_profile/GrShaderCache/: data_0  data_1  index
.scite_browser_profile/GraphiteDawnCache/: data_1  index
.scite_browser_profile/ShaderCache/: data_0  data_1  data_2  index
.scite_browser_profile/segmentation_platform/: ukm_db
helpers/: auth.py  models.py  template.py
nodes/: dsl_specialist.py  fail_fast_generator.py  hallucination_detector.py  librarian.py  math_specialist.py  orchestrator.py  physics_expert.py  researcher.py  summarizer.py
pages/: research-helper.py
prompts/: dsl_designer.prompt  fail-fast.prompt  hallucination-detector.prompt  librarian.prompt  math_specialist.prompt  orchestrator.prompt  physics-expert.prompt  summarizer.prompt
tools/: base.py  context.py  logger.py  scite.py
(+180 files in other folders)
