[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-gemini>=0.1.1",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.10",
    "mcp>=1.27.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
